--- a/index.html
+++ b/index.html
@@ -7,31 +7,23 @@
     <title>Horiseon</title>
 </head>
 <body>
-<!-- place current top nav bar with a header tag and a nav tag inidividually. they should wrap around each other <header> <nav> -->
-    <nav class="header">
+<!-- place current top nav bar with a header tag and a nav tag individually. they should wrap around each other <header> <nav> -->
+    <Header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
        <!-- remove this div -->
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <nav>
+            <a href="#search-engine-optimization">Search Engine Optimization</a>
+            <a href="#online-reputation-management">Online Reputation Management</a>
+            <a href="#social-media-marketing">Social Media Marketing</a>
+        </nav>
+    </Header>
  
     <!-- be much more descriptive with the "alt" of each image. should almost be a full sentence describing what is happening in the scene -->
 
-    <div class="hero" alt="Team Meeting"></div>
+    <img src="assets/images/digital-marketing-meeting.jpg" class="hero" alt="Team Meeting">
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization"/>
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook with Search Engine Optimization topics (Backlink, Content, Headings etc.)"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
@@ -39,7 +31,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop with someone trying to increase their reputation."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business.
@@ -47,7 +39,7 @@
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A group of people brainstorming topics of Social Media Marketing (Tweet, Share Like)"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, 
