corrected grammatical errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </Header>
 
-    <img src="assets/images/digital-marketing-meeting.jpg" class="hero" alt="Four co-workers sitiing as a desk brain storming marketing concepts.">
+    <img src="assets/images/digital-marketing-meeting.jpg" class="hero" alt="Four co-workers sitiing at a desk brain storming marketing concepts.">
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook with Search Engine Optimization topics (Backlink, Content, Headings etc.)"/>
